# hello-stm32-rs

./: .gitignore  Cargo.toml  build.rs
.cargo/: config.toml
src/: lib.rs  main.rs
tools/: memory.x
