[package]
name = "hello-stm32f401"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
stm32f4 = { version = "0.15.1", features = ["rt", "stm32f401"] }
stm32f4xx-hal = { version = "0.14.0", features = ["rt", "stm32f401"] }

# # cargo build/run
# [profile.dev]
# codegen-units = 1
# debug = 2
# debug-assertions = true # <-
# incremental = false
# opt-level = 'z'         # <-
# overflow-checks = true  # <-

# # cargo build/run --release
# [profile.release]
# codegen-units = 1
# debug = 2
# debug-assertions = false # <-
# incremental = false
# lto = 'fat'
# opt-level = 3            # <-
# overflow-checks = false  # <-
